Add responsividade na home do site

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-responsive.css">
     <title>Aging</title>
 </head>
 <body>
@@ -13,8 +14,11 @@
             <h1>Aging</h1>
        </div>
        <nav class="header__link">
-           <div class="link__contato">
-               contato
+           <div class="link__item-header">
+               <a href="" class="item__ancora">inicio</a> 
+           </div>
+           <div class="link__item-header">
+               <a href="" class="item__ancora">contato</a>
            </div>
        </nav>
    </header> 
@@ -57,7 +61,38 @@
               <li class="lista__item">Levar idoso para passeios</li>
               <li class="lista__item">Manter contato com a família e avisar se algo acontecer.</li>
           </ul>
+          <h2 class="conteudo__titulo">Ficou interessado?</h2>
+          <div class="conteudo__btn">Saiba mais</div>
         </div>
    </section>
+   <footer class="footer">
+           <div class="--background-transparente footer__logo">
+               Aging
+           </div>
+           <div class="--background-transparente footer__conteudo">
+               <div class="--background-transparente parceiros">
+                   <div class="--background-transparente">empresa</div>
+                   <div class="--background-transparente">empresa</div>
+                   <div class="--background-transparente">empresa</div>
+                   <div class="--background-transparente">empresa</div>
+               </div>
+               <div class="--background-transparente info">
+                    <div class="--background-transparente">infomação</div>
+                    <div class="--background-transparente">infomação</div>
+                    <div class="--background-transparente">informação</div>
+                    <div class="--background-transparente">informação</div>
+                </div>
+                <div class="--background-transparente info">
+                    <div class="--background-transparente">faq</div>
+                    <div class="--background-transparente">trabalhe conosco</div>
+                    <div class="--background-transparente">faq</div>
+                </div>
+                <div class="--background-transparente info">
+                    <div class="--background-transparente">outra coisa</div>
+                    <div class="--background-transparente">outra coisa</div>
+                    <div class="--background-transparente">outra coisa</div>
+                </div>
+           </div>
+   </footer>
 </body>
 </html>
